@@ -1,7 +1,4 @@
 ; Tests FPE (FPA10/FPA11/FPASC) immediate support
-; Option autocast is specified as we want to test the integer -> float
-; conversions.
-; RUNOPT: -autocast
 
 	AREA	Code, CODE
 
