@@ -1,3 +1,10 @@
+Fri Dec 30 03:13:56 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* regression/tests_pass/fpe_immediate.s: Remove obsolete
+	(and default now) option -autocast.
+	* regression/tests_pass/fpe_literal.s: Likewise.
+	* regression/tests_pass/fpe_memory.s: Likewise.
+
 Thu Dec 22 17:46:30 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* asm.c (ASM_NextLine, ASM_DoPass): Simplify code a little bit.
